--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,75 +1,147 @@
 <% @page_title = "Noel Leonard, Foley Attorney" %>
 <% @page_description = "Noel B. Leonard is a Foley Alabama injury attorney for personal injury, auto accidents, and 18 wheeler crashes in Baldwin, Mobile, and Escambia Counties." %>
 
+<!-- <div class="cst-header">
+		<div class="inner">
+			<h1>About Noel B. Leonard</h1>
+			<div class="title-line"></div>
+			<div class="clearfix"></div>
+			<h3>Attorney, LLC</h3>
+			<div class="text">
+
+				<h4 class="open">"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
+			 		<p>Noel B. Leonard, Attorney LLC is a law firm committed to providing excellent legal service within the state of Alabama.
+			 		We are located in Foley, and represent clients from <span>Mobile</span>, <span>Baldwin</span>, and <span>Escambia</span> counties.</p>
+			</div>
+		</div>
+	</div> -->
+
+
 <section class="site-intro">
 	<div class="overlay">
 		<div class="title-block">
       <h1>Noel B. Leonard</h1>
+			<div class="title-line"></div>
+			<div class="clearfix"></div>
       <h2>Attorney, LLC</h2>
-      <h4>Committed to Providing Excellent Legal Service Within the State of Alabama</h4>
+			<div class="text">
+      	<h4>Committed to Providing Excellent Legal Service Within the State of Alabama, and devoted to serving Baldwin, Mobile, and Escambia Counties.</h4>
+      </div>
 			<!-- <span>"Accidents happen...but finding the right attorney doesn't happen by accident."</span> -->
     </div>
 	</div>
 </section>
 
 <section class="practice-areas">
-	<h3>Foley Injury Attorney, Noel B. Leonard, is devoted to serving <b>Baldwin</b>, <b>Mobile</b>, and <b>Escambia Counties</b>. <br>
-		<span>Practice areas include but are not limited to:</span>
-	</h3>
+	<!-- <div class="pa-s1">
+		<h3>Noel B. Leonard is an Accident Attorney<br> Based in Foley, Alabama</h3>
+		<hr class="fancy dark">
+		<h4> Practice areas include but are not limited to:</h4>
+	</div> -->
 
-	<div class="practice-box bike">
-		<h4>Motorcyle Accident Injury Claims</h4>
-		<div class="title-line"></div>
-		<p>Every person who has suffered a personal injury deserves the time and dedication our law firm can provide, in order to make sure you are compensated for your legitimate physical and financial pain and suffering.</p>
-	</div>
 
-	<div class="practice-box auto">
-		<h4>Auto Accident Injury Claims</h4>
-		<div class="title-line"></div>
-		<p>Our firm ensures that victims of an automotive accident receive proper compensation for personal injuries sustained during the accident,
-		post-medical needs and rehabilitation, as well as property damages to vehicles, dwellings, and or businesses.</p>
-	</div>
+		<div class="pa-intro">
+			<div class="pa-s1">
+				<h3>Noel B. Leonard is an Accident Attorney Based in Foley, Alabama</h3>
+				<hr class="fancy dark">
+				<div class="clearfix"></div>
 
-	<div class="practice-box trucker">
-		<h4>18-Wheeler Accident Victims</h4>
-		<div class="title-line"></div>
-		<p>Whether the cause of the accident is driver fatigue or error, equipment failure, shifting or falling cargo, improper training or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.</p>
-	</div>
+					<p>If you are suffering from a serious injury caused by a motorcycle, automotive, or 18-wheeler accident, and you live in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
+					<p>Noel B. Leonard Attorney, LLC employs a knowledgeable legal staff, capable of addressing any legal concerns you may have.</p>
+					<p>Our firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.</p>
+					<!-- <h4>Every person who has suffered an injury deserves the time and dedication our law firm can provide.</h4> -->
+			</div>
+			<%=image_tag('noel-leonard.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive portrait') %>
+		</div>
+
+		<!-- <div class="break"></div> -->
+
+		<!-- <div class="practice-box bike">
+			<h4>Motorcyle Accident Injury Claims</h4>
+			<div class="title-line"></div>
+			<p>Motorcycles are the least protected vehicles on the road. As an avid motorcycle enthusiast, Noel B. Leonard is dedicated to fighting for motorcycle accident victims. He will help you understand your rights, and secure the compensation you need for recovery.</p>
+		</div>
+
+		<div class="practice-box auto">
+			<h4>Auto Accident Injury Claims</h4>
+			<div class="title-line"></div>
+			<p>Our firm ensures that victims of an automotive accident receive proper compensation for personal injuries sustained during the accident,
+			post-medical needs and rehabilitation, as well as property damages to vehicles, dwellings, and or businesses.</p>
+		</div>
+
+		<div class="practice-box trucker">
+			<h4>18-Wheeler Accident Victims</h4>
+			<div class="title-line"></div>
+			<p>Whether the cause of the accident is driver fatigue or error, equipment failure, shifting or falling cargo, improper training, or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.</p>
+		</div> -->
 
 
 	</div>
 </section>
 
 <section class="home-sec1">
-	<div class="info-top">
-		<h3>Noel B. Leonard Attorney, LLC</h3>
-		<h4>"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
-		<%=image_tag('noel-symbol.png', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive symbol') %>
-		<!-- <p>Noel B. Leonard Attorney, LLC, employs a knowledgeable legal staff, capable of addressing any legal concerns you may have. If you are the victim of a serious injury from a motorcycle, auto, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard Attorney, LLC can help.</p> -->
-	</div>
+	<div class="overlay">
+		<div class="info-top">
+			<h3>Noel B. Leonard Attorney, LLC</h3>
+			<h4>"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
+	    <!-- <%=image_tag( 'scales2.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive symbol')%> -->
+			<!-- <%=image_tag('noel-symbol.png', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive symbol') %> -->
+			<!-- <p>Noel B. Leonard Attorney, LLC, employs a knowledgeable legal staff, capable of addressing any legal concerns you may have. If you are the victim of a serious injury from a motorcycle, auto, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard Attorney, LLC can help.</p> -->
+		</div>
 
-	<div class="info-box">
-		<div class="container">
-			<div class="col-md-7">
-				<div class="text">
-					 <p>Noel B. Leonard Attorney, LLC, employs a knowledgeable legal staff, capable of addressing any legal concerns you may have. If you are the victim of a serious injury from a motorcycle, auto, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard Attorney, LLC can help.</p>
-					<p>Noel's firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.
-					</p>
+		<div class="info-box">
+			<div class="top">
+				<h4 class="pbi">Our practice areas include:</h4>
+				<hr class="fancy dark hlf">
+				<div class="practice-box bike">
+					<h4>Motorcyle Accident Injury Claims</h4>
+					<!-- <div class="title-line"></div> -->
+					<hr class="fancy">
+					<p>Motorcycles are the least protected vehicles on the road. As an avid motorcycle enthusiast, Noel B. Leonard is dedicated to fighting for motorcycle accident victims. He will help you understand your rights, and secure the compensation you need for recovery.</p>
 				</div>
-			</div>
-			<div class="col-md-4">
-				<%=image_tag('noel-leonard.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive') %>
-			</div>
-			<div class="clearfix"></div>
 
-			<div class="video-row">
-				<iframe class="one" src="https://www.youtube.com/embed/7Ax8NAhosgo" frameborder="0" allowfullscreen></iframe>
-				<iframe class="two" src="https://www.youtube.com/embed/5at_QmbdWAQ" frameborder="0" allowfullscreen></iframe>
+				<div class="practice-box auto">
+					<h4>Auto Accident Injury Claims</h4>
+					<hr class="fancy">
+					<!-- <div class="title-line"></div> -->
+					<p>Our firm ensures that victims of an automotive accident receive proper compensation for personal injuries sustained during the accident,
+					post-medical needs and rehabilitation, as well as property damages to vehicles, dwellings, and or businesses.</p>
+				</div>
+
+				<div class="practice-box trucker">
+					<h4>18-Wheeler Accident Victims</h4>
+					<hr class="fancy">
+    			<!-- <div class="title-line"></div> -->
+					<p>Whether the cause of the accident is driver fatigue or error, equipment failure, shifting or falling cargo, improper training, or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.</p>
+				</div>
+				<!-- <div class="col-md-7">
+					<div class="text">
+						<p>Noel B. Leonard Attorney, LLC, employs a knowledgeable legal staff, capable of addressing any legal concerns you may have. If you are the victim of a serious injury from a motorcycle, auto, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard Attorney, LLC can help.</p>
+						<p>Noel's firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<%=image_tag('noel-leonard.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive') %>
+				</div> -->
+				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
 </section>
 
+<div class="video-row">
+	<div class="container">
+	<iframe class="one" src="https://www.youtube.com/embed/7Ax8NAhosgo" frameborder="0" allowfullscreen></iframe>
+	<iframe class="two" src="https://www.youtube.com/embed/5at_QmbdWAQ" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
+
+		<!-- </div>
+	</div>
+</section>
+<div class="after"></div>
+ -->
 
 
 
