--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -61,6 +61,7 @@
           <ul class="contact">
             <li><span>Phone:</span> <%= number_to_phone(2519438638, delimiter: '-') %></li>
             <li><span>Fax:</span> 866-648-8201</li>
+            <li><span>Email:</span> noel@attorney-leonard.com</li>
             <li class="address">
             218 N. Alston Street, Foley, AL 36535</li>
           </ul>
