--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -19,7 +19,9 @@
       <div class="clearfix"></div>
       <h3>Attorney, LLC</h3>
       <div class="contact-info">
-        <div class="col-md-4"><h4 class="call"><%= number_to_phone(2519438638, delimiter: '-') %></h4></div>
+        <div class="col-md-4">
+        <h4 class="call"><%= number_to_phone(2519438638, delimiter: '-') %></h4>
+        </div>
 
         <div class="col-md-4">
           <h4 class="address">218 N. Alston Street<br> Foley, AL 36535</h4>
@@ -67,7 +69,7 @@
 
     <div class="s2">
       <div class="banner">
-          <p>If you live in <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, and suffer from an injury as a result of a motorcycle, automotive, or 18-wheeler accident, contact Noel B. Leonard today to discuss your options. Fill out our Case Evaluation Form below, or call us now, to schedule a consultation.</p>
+          <p>If you live in <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, and suffer from an injury as a result of a motorcycle, automotive, or 18-wheeler accident, contact Noel B. Leonard today to discuss your options.<br> Fill out our Case Evaluation Form below, or call us now, to schedule a consultation.</p>
       </div>
 
 
