--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -76,38 +76,39 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		height:600px;
 		@include sec-bgimage();
 		background-image: url(image_path('home-header.jpg'));
-		// background-position: center center;
-		position: relative;z-index: 0;
+		background-position: bottom center;
 
 		.overlay {
 			@include sec-default(); height:100%;
-		  // background: -webkit-linear-gradient(-120deg, rgba($white, .45), rgba($white, .6));
-		  // background: linear-gradient(-120deg, rgba($white, .45), rgba($white, .6));
 		  padding:80px;
 		}
 
 		.title-block{
+			background-color: rgba($white, .2);
 			text-align: center;
-			width:70%; @include center-block();
-			border: 1px solid $dark; padding: 60px;
+			width:50%;
+			border: 1px solid $dark; padding: 40px;
+			float: right;
 		}
 		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($dark, .4); margin-bottom: 10px;}
-		.text{@include center-block(); width:80%; padding-top:20px;}
+		.text{@include center-block(); width:90%; padding-top:20px;}
 		h1, h2, h3 {font-weight: bold;}
 		h1 {font-size: 4em;margin-bottom: 0;}
 		h2 {font-size: 3em;letter-spacing: 10px;}
-		h4{font-weight: bold; font-family: $open; line-height: 1.4em}
+		h4{font-weight: bold; font-family: $open; line-height: 1.5em; font-size: 19px;}
+	}
+
+	.fst-links { width:35%; text-align: center; display: inline-block; margin-left: 10%; float: none; padding: 7px 10px; @include ease();
+		background-color: $blue; margin-top: 15px; color: $white; font-weight: 600; font-family: $open; border-radius: 5px;
+		&:hover {background-color: $dk-blue}
 	}
 
 	.practice-areas {
 		@include sec-default();
 		padding:90px 70px;
 
-		// @include center-block();width: 55%; padding: 0 20px 45px;
-
 		.pa-intro {@include center-block(); width:75%; }
 		.pa-s1 { width: 50%; float: left;display: inline-block;
-			// text-align: center;
 			h3 { margin-bottom: 10px; color: $blue; font-weight: bold; text-align: center;}
 			hr.fancy {width: 50%;}
 			p {line-height: 1.5em; margin-bottom: 15px;padding-left:30px;}
@@ -115,42 +116,64 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		.portrait {width: 315px; display: inline-block; float: right; margin-right: 4%; margin-top: 25px; }
 		p.intro { font-size: 18px; font-weight: bold; text-align: center; margin-bottom: 20px;}
 	}
-	.practice-box {display: inline-block; width: 31%; float: left; color: $white; text-align: center; height: 235px;
-		margin-left: 20px; padding:25px 30px 15px;
-		@include sec-bgimage(); position: relative;z-index: 0;
-		background-image: url(image_path('lawyer.jpg'));
-		&::before {@include before(); background-color: rgba($navy,.8);}
-		// .title-line {width:55%; @include center-block(); height: 1px; background-color: rgba($white, .6); margin-bottom: 20px;}
-		&.bike {margin-left: 25px;}
-		hr.fancy{margin-top: 15px;}
-	}
+	.practice-box {display: inline-block; width: 32.5%; float: left; color: $white; text-align: center; height: 250px;
+		margin-left: 10px;
+		@include sec-bgimage();
+		background-position: top right;
+		background-size: 55%;
+		position: relative;z-index: 0;
+		background-image: url(image_path('speed-bike.jpg'));
 
-	.break {@include sec-default(); padding-bottom: 100px;}
+		&::before {@include before(); @include ease2();}
+		&.bike {margin-left: 6px;}
+		&.auto {background-image: url(image_path('texting.jpg'));}
+		&.trucker {background-image: url(image_path('slide7.png'));background-size: 58%;}
+		hr.fancy{margin-top: 15px; margin-bottom: 40px;}
+		.text {@include sec-default(); background-color: $blue; padding: 20px 10px; h4{margin-top:25%;}}
+		.content {@include sec-default();@include ease(); display: none; padding: 20px 15px;}
+
+		.pb-links { padding: 7px 10px; background-color: lighten($blue, 20%); margin-top: 20px; color: $white; font-weight: 600; font-family: $open; border-radius: 5px;}
+		.text {width: 50%; float: left;display: inline-block; height: 100%;}
+		.content {width: 50%; float: right; height: 100%; }
+
+		&:hover {
+			&::before {background-color: rgba($dk-blue,.9);}
+			.content {display: inline-block;}
+		}
+	}
 
 	.home-sec1 {
 		@include sec-default();
 		background-color: $offwhite;
 		@include sec-bgimage();
-		// height:600px;
 		background-image: url(image_path('cases.jpg'));
-		.overlay{@include sec-default(); padding: 80px 50px 0; background-color: rgba($navy, .9);}
-		// .text { @include sec-default(); padding: 40px;}
+		.overlay{@include sec-default(); padding: 50px 35px 80px; background-color: rgba($navy, .95);}
 		.info-top {width:75%; @include center-block(); h3, h4, p {color: $white; text-align: center;}}
 		.info-box { @include sec-default();
-		 	background-color: $white; padding: $sec-padding; padding-top: 35px; margin-top:40px;
+		 	background-color: $white; margin-top:25px; padding: 50px 20px ;
 			position: relative;z-index: 1;
 		}
-		.top {@include sec-default();
+		.top {@include sec-default(); padding-bottom: 80px;
 			h4.pbi {font-weight: bold; font-family: $open; text-align: center; text-transform: uppercase;}
 			hr.fancy.dark.hlf {width:15%; margin-bottom: 55px;}
 		}
 		.symbol {width: 60px; @include center-block(); }
 	}
-		.video-row { @include sec-default(); padding: 20px 40px 50px; text-align: center; background-color: $white;}
-		iframe { display: inline-block; width: 45%; height: 250px; margin:auto;
-			&.one {float: left;}
-			&.two {float: right;}
+	.video-row { @include sec-default(); padding: 50px 40px; text-align: center; background-color: $white;}
+
+	iframe { display: inline-block; width: 45%; height: 250px; margin:auto;
+		&.one {float: left; }
+		&.two {float: right; }
+	}
+
+		.cbox {@include sec-default();@include sec-bgimage; background-image: url(image_path('highway.jpg'));
+			.overlay {@include sec-default(); background-color: rgba($lt-blue, .9); padding: 30px 50px; text-align: center; }
+			a {color: $blue; font-weight: bold; }
+
+			// h3 {font-family: $open; font-weight: 600; color: $blue;}
+			h4, h3{font-weight: bold; line-height: 1.5em}
 		}
+
 
 
 	.after{	@include sec-default(); background-color: $white; height: 350px; position: relative; z-index: 0}
