added back to top mobile

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -82,6 +82,7 @@
       <!-- <p class="copy">Copyright <%= Time.now.year %></p> -->
       <span class="disclaimer">No representation is made that the quality of legal services to be performed is greater than the quality of legal services performed by other lawyers. </span>
   </div>
+  <a href="#" class="scroll-up">Scroll</a>
 </footer>
 
 
