--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -68,23 +68,26 @@ h5 {font-size: 15px;}
 .no-padding {padding: 0 !important;}
 
 .scroll-up {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   position: fixed;
   bottom: 15px;
-  right: 100px;
+  right: 10px;
   display: none;
   text-indent: -9999px;
-  background-image: url(image_path('to-top.png'));
+  background-image: url(image_path('up.png'));
   background-repeat: no-repeat;
-  background-color: $dark;
+  background-position: center center;
+  background-size: 55%;
+  background-color: $blue;
   z-index: 100;
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
+  visibility: hidden;
 
-  @include bp(tb) { right: 30px; }
-  @include bp(sm) { right: 15px; }
+  @include bp(tb) { visibility: visible;}
+  @include bp(md) { right: 5px;width: 25px; height: 25px; }
 }
 
 footer { @include sec-default(); background-color: $dk-blue; border-top: 2px solid $light;
