--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -42,6 +42,7 @@
     <div class="fs2">
       <div class="block one">
         <h5>Noel B. Leonard, Attorney LLC</h5>
+        <div class="ft-title"></div>
         <p>We are a law firm based in Foley, Alabama, who represents clients from the Alabama counties of Mobile, Baldwin, and Escambia.</p>
       </div>
 
