--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,57 +1,60 @@
 <header class="header-alt">
   <div id="top-bar">
-    <div class="tb-block">
-      <ul class="social-links">
-        <li>
-          <%= link_to '/fb', target: '_blank' do %>
-            <i class="fa fa-facebook"></i>
-          <% end %>
-        </li>
+    <div class="container">
+      <div class="tb-block">
+        <ul class="social-links">
+          <li>
+            <%= link_to '/fb', target: '_blank' do %>
+              <i class="fa fa-facebook"></i>
+            <% end %>
+          </li>
 
-        <li>
-          <%= link_to '/twitter', target: '_blank' do %>
-            <i class="fa fa-twitter"></i>
-          <% end %>
-        </li>
+          <li>
+            <%= link_to '/twitter', target: '_blank' do %>
+              <i class="fa fa-twitter"></i>
+            <% end %>
+          </li>
 
-        <li>
-          <%= link_to '/linkedin', target: '_blank' do %>
-            <i class="fa fa-linkedin"></i>
-          <% end %>
-        </li>
+          <li>
+            <%= link_to '/linkedin', target: '_blank' do %>
+              <i class="fa fa-linkedin"></i>
+            <% end %>
+          </li>
 
-        <li>
-          <%= link_to '/twitter', target: '_blank' do %>
-            <i class="fa fa-twitter"></i>
-          <% end %>
-        </li>
+          <li>
+            <%= link_to '/twitter', target: '_blank' do %>
+              <i class="fa fa-twitter"></i>
+            <% end %>
+          </li>
 
-        <li>
-          <%= link_to '/youtube', target: '_blank' do %>
-            <i class="fa fa-youtube"></i>
-          <% end %>
-        </li>
-      </ul>
+          <li>
+            <%= link_to '/youtube', target: '_blank' do %>
+              <i class="fa fa-youtube"></i>
+            <% end %>
+          </li>
+        </ul>
 
-      <span>|</span>
+        <span>|</span>
 
-      <h5><%= link_to('Fill Out Our Case Evaluation Form', contact_path ) %></h5>
-      <!-- <h5>Serving Baldwin, Mobile, &amp; Escambia Counties in Alabama</h5> -->
+        <h5><%= link_to('Fill Out Our Case Evaluation Form', contact_path ) %></h5>
+        <!-- <h5>Serving Baldwin, Mobile, &amp; Escambia Counties in Alabama</h5> -->
+      </div>
     </div>
   </div>
 
   <div class="main-header">
-    <div class="logo-block">
-      <%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive logo-img'), root_path ) %>
-      <!-- <h3>Noel B. Leonard Attorney, LLC</h3> -->
-    </div>
+    <div class="container">
+      <div class="logo-block">
+        <%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive logo-img'), root_path ) %>
+        <!-- <h3>Noel B. Leonard Attorney, LLC</h3> -->
+      </div>
 
-    <div class="main-block">
-      <h4><span>Call Today:</span><br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
-      <!-- <h4 class="address">218 N. Alston Street<br> Foley, AL 36535</h4> -->
-      <%= link_to('/espanol', class: 'esp-link' ) do %>
+      <div class="main-block">
+        <h4><span>Call Today:</span><br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
+        <%= link_to('/espanol', class: 'esp-link' ) do %>
           <h4>habla espanol? <br>haga clic aqui</h4>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 
