photo bg, starting mobile

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,6 +31,7 @@
 					<%= link_to "Contact Us", contact_path, class: 'fst-links' %>
 			</div>
 			<%=image_tag('noel-leonard.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive portrait') %>
+			<div class="portrait-bg"></div>
 			<!-- <div class="clearfix"></div> -->
 		</div>
 </section>
