--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -98,9 +98,10 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		h4{font-weight: bold; font-family: $open; line-height: 1.5em; font-size: 20px;}
 	}
 
-	.fst-links { width:35%; text-align: center; display: inline-block; margin-left: 10%; float: none; padding: 7px 10px; @include ease();
-		background-color: $blue; margin-top: 15px; color: $white; font-weight: 600; font-family: $open; border-radius: 5px;
-		&:hover {background-color: $dk-blue}
+	.fst-links { width:40%; text-align: center; display: inline-block; margin-left: 5%; float: none; padding: 10px; @include ease();
+		background-color: $dk-blue; margin-top: 15px; color: $white; font-weight: 600; font-family: $open; border-radius: 5px; font-size: 16px;
+		&.one{ margin-left: 7%;}
+		&:hover {background-color: $blue}
 	}
 
 	.practice-areas {
@@ -113,7 +114,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			hr.fancy {width: 50%;}
 			p {line-height: 1.5em; margin-bottom: 15px;padding-left:30px;}
 		}
-		.portrait {width: 315px; display: inline-block; float: right; margin-right: 4%; margin-top: 45px; }
+		.portrait {width: 315px; display: inline-block; float: right; margin-right: 4%; margin-top: 45px; position: relative; z-index: 2;}
+		.portrait-bg {content:''; width: 290px; height: 340px; position: absolute; margin-top:0px; right:15%; background-color: $navy; z-index: 1;}
 		p.intro { font-size: 18px; font-weight: bold; text-align: center; margin-bottom: 20px;}
 	}
 	.practice-box {display: inline-block; width: 32.5%; float: left; color: $white; text-align: center; height: 250px;
@@ -166,18 +168,15 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		&.two {float: right; }
 	}
 
-		.cbox {@include sec-default();@include sec-bgimage; background-image: url(image_path('traffic.jpg')); background-position: center center;
-			.overlay {@include sec-default(); background-color: rgba(lighten($lt-blue, 5%), .94); padding: 30px 50px; text-align: center; }
-			a {color: $blue; font-weight: bold; }
+	.cbox {@include sec-default();@include sec-bgimage; background-image: url(image_path('traffic.jpg')); background-position: center center;
+		.overlay {@include sec-default(); background-color: rgba(lighten($lt-blue, 5%), .94); padding: 30px 50px; text-align: center; }
+		a {color: $blue; font-weight: bold; }
 
-			// h3 {font-family: $open; font-weight: 600; color: $blue;}
-			h4, h3{font-weight: bold; line-height: 1.5em}
-		}
-
-
+		// h3 {font-family: $open; font-weight: 600; color: $blue;}
+		h4, h3{font-weight: bold; line-height: 1.5em}
+	}
 
 	.after{	@include sec-default(); background-color: $white; height: 350px; position: relative; z-index: 0}
-
 }
 
 .page {
