--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,8 +24,8 @@
 				<div class="clearfix"></div>
 
 					<p>If you are suffering from a serious injury caused by a motorcycle, automotive, or 18-wheeler accident, and you live in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
-					<p>Noel B. Leonard Attorney, LLC employs a knowledgeable legal staff, capable of addressing any legal concerns you may have.</p>
-					<p>Our firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.</p>
+					<p>Noel B. Leonard Attorney, LLC has a knowledgeable staff, capable of addressing any legal concerns you may have.</p>
+					<p>Our firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries sustained during the accident.</p>
 					<!-- <h4>Every person who has suffered an injury deserves the time and dedication our law firm can provide.</h4> -->
 					<%= link_to "More About Us", about_path, class: 'fst-links one' %>
 					<%= link_to "Contact Us", contact_path, class: 'fst-links' %>
@@ -42,11 +42,12 @@
 			<h3>Noel B. Leonard Attorney, LLC</h3>
 		</div>
 
-		<div class="info-box">
+		<div class="info-box-alt">
 			<div class="top">
 				<h4 class="open text-center">"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
 				<h4 class="pbi">Our practice areas include:</h4>
 				<hr class="fancy dark hlf">
+
 				<div class="practice-box bike">
 					<div class="text">
 						<h4>Motorcyle Accident Injury Claims</h4>
@@ -79,24 +80,25 @@
 						<p>Whether the cause of the accident is driver error, equipment failure, shifting cargo, or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.</p>
 					</div>
 				</div>
-				<div class="clearfix"></div>
-			</div>
 
-			<div class="col-md-12">
-				<div class="call">
-					<div class="cbox">
-						<div class="overlay">
-							<div class="col-md-8 col-md-offset-2">
-								<h4>If you are an auto accident victim in Baldwin, Mobile or Escambia County, contact us today to schedule a consultation:</h4>
-									<hr class="fancy dark">
-								<h3>Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or
-								call <%= number_to_phone(2519438638, delimiter: '-', class: 'phone') %> to set up an appointment.</h3>
+				<div class="practice-box cbox">
+					<div class="col-md-12">
+						<div class="call">
+							<div class="cbox">
+								<div class="overlay">
+									<div class="col-md-8 col-md-offset-2">
+										<h4>If you are an auto accident victim in Baldwin, Mobile or Escambia County, contact us today to schedule a consultation:</h4>
+											<hr class="fancy dark">
+										<h3>Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or
+										call <%= number_to_phone(2519438638, delimiter: '-', class: 'phone') %> to set up an appointment.</h3>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 
+			</div>
 		</div>
 	</div>
 </section>
