new home page, except header

--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -63,7 +63,7 @@
 			</div>
 
 				<div class="block2">
-					<p>Attorney Leonard has successfully represented 18-wheeler accident victims throughout Alabama, when pursuing claims against the following:</p>
+					<p>Attorney Leonard has experience representing 18-wheeler accident victims throughout Alabama, helping pursue claims against the following:</p>
 					<ul>
 						<li><i class="fa fa-gavel"></i> Drunk Drivers</li>
 						<li><i class="fa fa-gavel"></i> Negligent Drivers</li>
