--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -54,8 +54,8 @@
 							<li><i class="fa fa-chevron-circle-right"></i>Accommodate evening and weekend appointments</li>
 							<li><i class="fa fa-chevron-circle-right"></i>Provide superior representation for your legal concerns</li>
 							<li><i class="fa fa-chevron-circle-right"></i>Ensure first-class client service and personalized attention</li>
-							<li><i class="fa fa-chevron-circle-right"></i>Defend you against claims brought against you</li>
-							<li><i class="fa fa-chevron-circle-right"></i>Advance your expenses</li>
+							<!-- <li><i class="fa fa-chevron-circle-right"></i>Defend you against claims brought against you</li> -->
+							<!-- <li><i class="fa fa-chevron-circle-right"></i>Advance your expenses</li> -->
 							<li><i class="fa fa-chevron-circle-right"></i>Maximize your recovery</li>
 						</ul>
 					</div></div>
