--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -6,8 +6,8 @@ $gray: #9d9d9d;
 $offwhite: #f5f4f4;
 $hcolor: #252525;
 $blue: #0060af;
-// $navy: #062f45;
-$navy:darken($blue, 25%);
+$navy: #00173a;
+// $navy:darken($blue, 25%);
 $dk-blue: #022444;
 $br-blue: #007ce2;
 $lt-blue: #b2cfe7;
