--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 
-header.header-alt {@include sec-default();
+header.header-alt {@include sec-default(); display: none;
   background-color: $white;
 
     #top-bar {  @include sec-default(); padding: 5px 0px 0;
@@ -41,6 +41,81 @@ header.header-alt {@include sec-default();
           &:last-child{margin-right: 5px;}
           &:first-child{margin-left: 0px;}
           a{ font-size: 15px; line-height: 2em; color: $white; text-transform: uppercase; }
+      }
+
+      .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
+      .has-child:hover >.dropdown{display:block;width:175px; }
+      .dropdown .dropdown-items{list-style:none;padding:0;margin:0;text-transform:uppercase;}
+      .dropdown .dropdown-inner{background: $navy;padding:0px;box-shadow:0 3px 5px 0 rgba($black,0.2); }
+
+      .dropdown li.menu-item{margin-left:0;display:block;padding:0;position:relative;width: 100%; border-top: none;border-bottom: 1px dotted rgba($light, .3);
+          &:last-child {border-bottom: none;}
+          a{width:100%;display:block;padding:10px;color:$white;cursor:pointer;font-size:14px; line-height: 2em;
+              &:hover{color:$hcolor}
+          }
+      }
+    }
+
+    @include bp(tb) {
+      #top-bar {padding-right:0px;
+        .tb-block {width:75%; float: right; margin-right: 20px;}
+      }
+
+      .mega-tab { ul{padding-left:10px;} li{ margin: 10px 15px 0;}}
+    }
+
+    @include bp(md) {
+      #top-bar {
+        .tb-block {width:100%; float: none; margin: auto;}
+      }
+      .main-header {padding: 10px 30px 5px;}
+      .logo-block { width: 40%;}
+      .main-block {width: 55%; margin-top:5px;}
+      .mega-tab {display: none}
+    }
+}
+
+header.header-new {@include sec-default();
+  // background-color: $white;
+  background-color: $navy;
+
+    #top-bar {  @include sec-default(); padding: 5px 0px 0;
+
+      .tb-block {width:45%; float: right;}
+      h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
+      span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
+      h5 a {color: $white;}
+    }
+
+    .social-links { display: inline-block;
+      li { display: inline-block; margin-right:10px;
+        a { background-color: transparent; color: $white; font-size: 15px;
+          &:hover {color: white;}
+        }
+      }
+    }
+
+    .main-header {@include sec-default(); padding: 10px 75px 5px;}
+    .logo-block {display: inline-block; float: left; width: 40%; padding: 10px 0; margin-left: 50px;
+      .logo-img {height:85px; float: left; margin-right:6px;}
+      h3 {margin-top:25px; font-size: 22px;}
+    }
+    .main-block {display: inline-block; float: right; width: 40%; margin-top:14px;
+      h4 {display: inline-block; color: $white; text-align: center;
+        span {font-weight: normal; font-size: 15px;}
+        &.address {margin: 0 35px;text-align: center;}
+       .call-link{color: $blue; font-size: 22px; font-weight: bold;}
+      }
+      .esp-link h4 { font-family: $open; margin-left: 70px; font-style: italic;background-color: $offwhite; padding: 10px; color: $dk-blue}
+    }
+    .mega-tab {@include sec-default(); list-style:none;
+     // background-color: $dk-blue;
+      background-color: $offwhite;
+      text-align: center; float: left;
+      li{display:inline-block; margin: 10px 20px 0;
+          &:last-child{margin-right: 5px;}
+          &:first-child{margin-left: 0px;}
+          a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
       }
 
       .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
