--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -71,31 +71,45 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 .home {
+	header.header-new {background-color: transparent; position: absolute;
+		.mega-tab {display: none;}
+	}
+
+	.mega-tab {@include sec-default(); text-align:center; border-bottom: 1px solid #dfdfdf;
+		li {display: inline-block; margin:15px 25px 10px;
+      &:last-child{margin-right: 5px;}
+      &:first-child{margin-left: 0px;}
+      a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
+    }
+  }
+
 	.site-intro{
 		@include sec-default();
-		height:600px;
+		height:700px;
 		@include sec-bgimage();
-		background-image: url(image_path('home-header.jpg'));
-		background-position: bottom center;
+		background-image: url(image_path('auto.jpg'));
+		background-position: center center;
 
 		.overlay {
 			@include sec-default(); height:100%;
-		  padding: 80px;
+			background-color: rgba($dark, .6);
+		  padding-top: 200px;
 		}
 
 		.title-block{
-			background-color: rgba($white, .2);
 			text-align: center;
-			width:50%;
-			border: 1px solid $dark; padding: 40px;
-			float: right;
+			width:52%;
+			border: 1px solid rgba($silver, .3);
+			padding: 40px 30px;
+			margin: auto;
 		}
-		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($dark, .4); margin-bottom: 10px;}
-		.text{@include center-block(); width:90%; padding-top:40px;}
-		h1, h2, h3 {font-weight: bold;}
+		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($silver, .4); margin-bottom: 10px;}
+		.text{width: 95%; @include center-block();padding-top:35px;}
+		h1, h2, h4 {font-weight: bold; color: $silver; @include tshadowl($dark);}
 		h1 {font-size: 4em;margin-bottom: 0;}
 		h2 {font-size: 3em;letter-spacing: 10px;}
-		h4{font-weight: bold; font-family: $open; line-height: 1.5em; font-size: 20px;}
+		h3{font-family: $open; font-weight: 600; color: $silver; @include tshadowl($black); line-height: 1.5em;}
+		h4{font-family: $open; line-height: 1.5em; font-size: 20px; font-weight: 600;}
 	}
 
 	.fst-links { width:40%; text-align: center; display: inline-block; margin-left: 5%; float: none; padding: 10px; @include ease();
@@ -106,17 +120,31 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 	.practice-areas {
 		@include sec-default();
-		padding:90px 70px;
-
-		.pa-intro {@include center-block(); width:75%; }
-		.pa-s1 { width: 50%; float: left;display: inline-block;
-			h3 { margin-bottom: 10px; color: $blue; font-weight: bold; text-align: center;}
+		padding: 40px 0px;
+		.pa-s1 { width: 42%; @include center-block(); text-align: center;
+			h3 { margin-bottom: 10px; color: $blue; font-weight: bold; line-height: 1.4em; font-size: 22px;
+				span {font-size: 27px;}
+			}
 			hr.fancy {width: 50%;}
-			p {line-height: 1.5em; margin-bottom: 15px;padding-left:30px;}
+			p {padding: 0 20px;}
 		}
-		.portrait {width: 315px; display: inline-block; float: right; margin-right: 4%; margin-top: 45px; position: relative; z-index: 2;}
-		.portrait-bg {content:''; width: 290px; height: 340px; position: absolute; margin-top:0px; right:15%; background-color: $navy; z-index: 1;}
-		p.intro { font-size: 18px; font-weight: bold; text-align: center; margin-bottom: 20px;}
+
+		.pa-intro {@include sec-default(); margin-top: 60px; position: relative; z-index: 1; padding: 20px 0px 15px;
+			&::before {@include before(); background-color: $navy; height: 190px;}
+		}
+
+		.pa-s2 { width: 50%; float: left; display: inline-block; padding-left: 30px;
+			h3 { margin-bottom: 10px;font-family: $open; color: $white; text-transform: uppercase; font-weight: bold; font-size: 30px;
+				span {color: lighten($blue, 10%);}
+			}
+			hr.fancy {width: 50%;}
+			p {line-height: 1.5em; margin-bottom: 10px;padding-left:15px;}
+			p.first {color: $white; font-size: 17px; background-color: $navy; }
+			p.second {font-weight: 600; font-size: 17px;}
+			h4 {font-weight: bold; color: $blue; font-family: $open; text-transform: uppercase;}
+		}
+		.portrait {width: 30%; display: inline-block; float: none; margin-left: 10%; }
+		.break {@include sec-default(); padding-bottom: 40px;}
 	}
 
 	.home-sec1 {
@@ -124,61 +152,24 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		background-color: $offwhite;
 		@include sec-bgimage();
 		background-image: url(image_path('cases.jpg'));
-		.overlay{@include sec-default(); padding: 50px 35px 80px; background-color: rgba($navy, .95);}
+		.overlay{@include sec-default(); padding: 50px 35px ; background-color: rgba($navy, .95);}
 		.info-top {width:75%; @include center-block(); h3, h4, p {color: $white; text-align: center;}}
-		.info-box { @include sec-default();
-		 	background-color: $white; margin-top:25px; padding: 50px 20px ;
-			position: relative;z-index: 1;
-		}
-		.top {@include sec-default(); padding-bottom: 80px;
-			h4.pbi {font-weight: bold; font-family: $open; text-align: center; text-transform: uppercase;}
-			hr.fancy.dark.hlf {width:15%; margin-bottom: 55px;}
-		}
-		.symbol {width: 60px; @include center-block(); }
 	}
-	.practice-box {display: inline-block; width: 32.5%; float: left; color: $white; text-align: center; height: 250px;
-		margin-left: 10px;
-		@include sec-bgimage();
-		background-position: top right;
-		background-size: 55%;
-		position: relative;z-index: 0;
-		background-image: url(image_path('speed-bike.jpg'));
-
-		&::before {@include before(); @include ease2();}
-		&.bike {margin-left: 6px;}
-		&.auto {background-image: url(image_path('texting.jpg'));}
-		&.trucker {background-image: url(image_path('cargo.jpg'));background-position: bottom right;}
-		hr.fancy{margin-top: 15px; margin-bottom: 40px;}
-		.text {width: 50%; float: left;display: inline-block; height: 100%; background-color: darken($blue, 15%); padding: 20px 10px; h4{margin-top:25%;}}
-		.content {width: 50%; float: right; height: 100%; @include ease(); display: none; padding: 20px 15px;}
-
-		.pb-links { padding: 7px 10px; background-color: lighten($blue, 20%); margin-top: 20px; color: $white; font-weight: 600; font-family: $open; border-radius: 5px;}
-
-		&:hover {
-			&::before {background-color: rgba($dk-blue,.9);}
-			.content {display: inline-block;}
-		}
-	}
-
-
-
-
 
 	.info-box-alt { @include sec-default();
-	 	background-color: $white; margin-top:25px; padding: 50px 20px ;
+	 	background-color: $white; margin-top:10px; padding: 30px 20px 15px;
 		position: relative;z-index: 1;
 
-		.top {@include sec-default(); padding-bottom: 80px;
+		.top {@include sec-default();
 			h4.pbi {font-weight: bold; font-family: $open; text-align: center; text-transform: uppercase;}
 			hr.fancy.dark.hlf {width:15%; margin-bottom: 55px;}
 		}
-		.symbol {width: 60px; @include center-block(); }
 
 		.practice-box {display: inline-block; width: 45%; float: left; color: $white; text-align: center; height: 250px;
-			margin-left: 10px; margin-bottom: 30px;
+			margin-left: 3%; margin-bottom: 30px;
 			@include sec-bgimage();
 			background-position: bottom right;
-			background-size: 51%;
+			background-size: 55%;
 			position: relative;z-index: 0;
 			background-image: url(image_path('speed-bike.jpg'));
 
@@ -186,14 +177,23 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			&.auto {background-image: url(image_path('texting.jpg'));}
 			&.trucker {background-image: url(image_path('cargo.jpg'));background-position: bottom right;}
 			hr.fancy{margin-top: 15px; margin-bottom: 40px;}
-			.text {width: 50%; float: left;display: inline-block; height: 100%; background-color: darken($blue, 15%); padding: 20px 10px; h4{margin-top:25%;}}
-			.content {width: 50%; float: right; height: 100%; @include ease(); display: none; padding: 20px 15px;}
-
-			.pb-links { padding: 7px 10px; background-color: lighten($blue, 20%); margin-top: 20px; color: $white; font-weight: 600; font-family: $open; border-radius: 5px;}
+			.text {width: 45%; float: left;display: inline-block; height: 100%; background-color: darken($blue, 15%); padding: 20px; h4{margin-top:25%;}}
+			.content {width: 55%; float: right; height: 100%; @include ease(); display: none; padding: 35px 15px;
+				p.last{margin-bottom: 25px;}
+			}
+			.pb-links { padding: 7px 10px; background-color: lighten($blue, 20%); color: $white; font-weight: 600; font-family: $open; border-radius: 5px;}
 
 			&:hover {
 				&::before {background-color: rgba($dk-blue,.9);}
 				.content {display: inline-block;}
+			}
+
+			&.cbox {background-image: url(image_path('traffic.jpg')); background-size: 100%;
+				.overlay {@include sec-default(); background-color: rgba(lighten($lt-blue, 5%), .94); padding: 30px 0px 20px;  }
+				h4{font-weight: bold; line-height: 1.5em; color: $dark;
+					a, span {color: $blue; font-weight: bold; }
+				}
+				&::before{display: none;}
 			}
 		}
 	}
@@ -205,13 +205,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		&.two {float: right; }
 	}
 
-	.cbox {@include sec-default();@include sec-bgimage; background-image: url(image_path('traffic.jpg')); background-position: center center;
-		.overlay {@include sec-default(); background-color: rgba(lighten($lt-blue, 5%), .94); padding: 30px 50px; text-align: center; }
-		a {color: $blue; font-weight: bold; }
-
-		// h3 {font-family: $open; font-weight: 600; color: $blue;}
-		h4, h3{font-weight: bold; line-height: 1.5em}
-	}
 	.after{	@include sec-default(); background-color: $white; height: 350px; position: relative; z-index: 0}
 
 	@include bp(tb) {
