--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,11 +16,11 @@
     </div>
 	</div>
 </section>
- <div class="mega-tab">
+<!--  <div class="mega-tab">
     <ul class="megamenu-parent menu-zoom hidden-xs">
       <%= render 'layouts/nav' %>
     </ul>
-  </div>
+  </div> -->
 
 <section class="practice-areas">
 	<div class="pa-s1">
