--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -79,13 +79,9 @@ header.header-new {@include sec-default();
   // background-color: $white;
   background-color: $navy;
 
-    #top-bar {  @include sec-default(); padding: 5px 0px 0;
-
-      .tb-block {width:45%; float: right;}
-      h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
-      span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
-      h5 a {color: $white;}
-    }
+      // h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
+      // span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
+      // h5 a {color: $white;}
 
     .social-links { display: inline-block;
       li { display: inline-block; margin-right:10px;
@@ -95,27 +91,27 @@ header.header-new {@include sec-default();
       }
     }
 
-    .main-header {@include sec-default(); padding: 10px 75px 5px;}
-    .logo-block {display: inline-block; float: left; width: 40%; padding: 10px 0; margin-left: 50px;
-      .logo-img {height:85px; float: left; margin-right:6px;}
+    .main-header {@include sec-default(); padding: 10px 0 5px;}
+    .logo-block {display: inline-block; float: left; width: 30%; padding: 10px 0;
+      .logo-img {height:95px; float: left; margin-right:6px;}
       h3 {margin-top:25px; font-size: 22px;}
     }
-    .main-block {display: inline-block; float: right; width: 40%; margin-top:14px;
-      h4 {display: inline-block; color: $white; text-align: center;
+    .main-block {display: inline-block; float: right; width: 55%; margin-top:35px; text-align: center;
+      h4.call, h4.eval, .esp-link h4 {display: inline-block; color: $white; float: left; width: 33%;
         span {font-weight: normal; font-size: 15px;}
-        &.address {margin: 0 35px;text-align: center;}
-       .call-link{color: $blue; font-size: 22px; font-weight: bold;}
       }
-      .esp-link h4 { font-family: $open; margin-left: 70px; font-style: italic;background-color: $offwhite; padding: 10px; color: $dk-blue}
+      h4.eval { a {color: $white;}}
+     .call-link{color: $blue; font-size: 22px; font-weight: bold;}
     }
     .mega-tab {@include sec-default(); list-style:none;
-     // background-color: $dk-blue;
       background-color: $offwhite;
       text-align: center; float: left;
       li{display:inline-block; margin: 10px 20px 0;
-          &:last-child{margin-right: 5px;}
-          &:first-child{margin-left: 0px;}
-          a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
+        &:first-child{margin-left: 0px;}
+        a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
+        ul.social-links { padding-left: 0;
+          li { display: inline-block; margin-right:0px; a {font-size: 16px;}}
+        }
       }
 
       .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
