--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -75,57 +75,12 @@
 
 
 <header class="header-new">
-  <div id="top-bar">
-    <div class="container">
-      <div class="tb-block">
-        <ul class="social-links">
-          <li>
-            <%= link_to '/fb', target: '_blank' do %>
-              <i class="fa fa-facebook"></i>
-            <% end %>
-          </li>
-
-          <li>
-            <%= link_to '/twitter', target: '_blank' do %>
-              <i class="fa fa-twitter"></i>
-            <% end %>
-          </li>
-
-          <li>
-            <%= link_to '/linkedin', target: '_blank' do %>
-              <i class="fa fa-linkedin"></i>
-            <% end %>
-          </li>
-
-          <li>
-            <%= link_to '/twitter', target: '_blank' do %>
-              <i class="fa fa-twitter"></i>
-            <% end %>
-          </li>
-
-          <li>
-            <%= link_to '/youtube', target: '_blank' do %>
-              <i class="fa fa-youtube"></i>
-            <% end %>
-          </li>
-        </ul>
-
-        <span>|</span>
-
-        <h5><%= link_to('Fill Out Our Case Evaluation Form', contact_path ) %></h5>
-      </div>
-    </div>
-  </div>
-
   <div class="main-header">
     <div class="container">
-      <div class="logo-block">
-        <%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive logo-img'), root_path ) %>
-        <!-- <h3>Noel B. Leonard Attorney, LLC</h3> -->
-      </div>
-
+      <div class="logo-block"><%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive logo-img'), root_path ) %></div>
       <div class="main-block">
-        <h4><span>Call Today:</span><br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
+        <h4 class="call">Call Today:<br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
+        <h4 class="eval">Fill Out Our<br><%= link_to('Contact Form', contact_path ) %></h4>
         <%= link_to('/espanol', class: 'esp-link' ) do %>
           <h4>habla espanol? <br>haga clic aqui</h4>
         <% end %>
@@ -136,18 +91,46 @@
   <div class="mega-tab">
     <ul class="megamenu-parent menu-zoom hidden-xs">
       <%= render 'layouts/nav' %>
+        <li><ul class="social-links">
+            <li>
+              <%= link_to '/fb', target: '_blank' do %>
+                <i class="fa fa-facebook"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/twitter', target: '_blank' do %>
+                <i class="fa fa-twitter"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/linkedin', target: '_blank' do %>
+                <i class="fa fa-linkedin"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/twitter', target: '_blank' do %>
+                <i class="fa fa-twitter"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/youtube', target: '_blank' do %>
+                <i class="fa fa-youtube"></i>
+              <% end %>
+            </li>
+          </ul>
+        </li>
     </ul>
   </div>
 
   <div>
     <a href="#" id="offcanvas-toggler">
-        <span></span>
-        <span></span>
-        <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </a>
   </div>
 </header>
-
-
-<!-- call --- form
-social --- espanol -->
